ingress-nginx/ingress-deployment.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - http:
      paths:
        - path: /parrot
          backend:
            serviceName: parrot-service
            servicePort: 3000
        - path: /random
          backend:
            serviceName: randomizer-service
            servicePort: 3000
